<resources>
    <string name="app_name">FitTrack</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_workout">Workout Plans</string>
    <string name="title_progress">Progress</string>
    <string name="title_profile">Profile</string>
    <string name="your_favorite_exercises">Your Favorite Exercises:</string>
    <string name="start_workout">Start Workout</string>
    <string name="last_workout_full_body_strength">Last Workout: Full Body Strength</string>
    <string name="_50_of_daily_goal_achieved">50% of daily goal achieved!</string>
    <string name="_7_500_steps">🚶‍♂️ 7,500 steps</string>
    <string name="_450_kcal">🔥 450 kcal</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_description">Workout description</string>
    <string name="cardio_workouts">Cardio Workouts</string>
    <string name="strength_workouts">Strength Workouts</string>
    <string name="are_you_ready_to_sweat">Are you ready to sweat?</string>
    <string name="calories_burned">Calories Burned: 100</string>
    <string name="calories_burned_0_kcal">Calories Burned: 0 kcal</string>
    <string name="duration_45_min">Duration: 45 min</string>
    <string name="duration_10_min">Duration: 10 min</string>
    <string name="starting_workout">Starting workout…</string>
    <string name="finish">Finish</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_height_cm">Enter your height (cm)</string>
    <string name="enter_your_weight_kg">Enter your weight (kg)</string>
    <string name="save_profile">Save Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="bmi">BMI: —</string>
    <string name="status">Status: —</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="_750_kcal">750 kcal</string>
    <string name="_1">1.</string>
    <string name="david">David</string>
    <string name="leaderboard_daily_calories">Leaderboard - Daily Calories</string>
    <string name="you_are_currently_ranked">You are currently ranked #1</string>
    <string name="sign_out">Sign Out</string>
</resources>