<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_EDIT_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:hint="@string/age">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_EDIT_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:hint="@string/height_cm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_EDIT_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:hint="@string/weight_kg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_EDIT_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_LBL_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/bmi"
        android:textColor="@color/black"
        android:textSize="@dimen/workout_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_LBL_bmi_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="@dimen/workout_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/edit_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/save_profile"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:minHeight="48dp"
        android:text="@string/sign_out"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColor="@android:color/white"/>
</LinearLayout>
