<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.workout.WorkoutFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/FW_LBL_motivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/are_you_ready_to_sweat"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FW_BTN_cardio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/cardio_workouts" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FW_BTN_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strength_workouts" />

</LinearLayout>
