<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/padding"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCaloriesBurned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_burned_0_kcal"
                android:textSize="18sp"
                android:layout_marginEnd="@dimen/padding"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressDailyGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:progress="50"
            android:max="100"
            android:layout_marginTop="@dimen/padding"/>

        <TextView
            android:id="@+id/tvGoalStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50_of_daily_goal_achieved"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/padding"/>

        <Button
            android:id="@+id/btnStartWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_workout"
            android:layout_marginBottom="@dimen/padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_favorite_exercises"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_Bottom"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
