<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/progress_LBL_workoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_name"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/progress_LBL_duration_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_10_min"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/progress_LBL_workoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/progress_LBL_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_workout"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/progress_LBL_duration_workout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/progress_Bar_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        app:layout_constraintTop_toBottomOf="@id/progress_LBL_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:max="100"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/progress_BTN_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintTop_toBottomOf="@id/progress_Bar_workout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
