<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/leaderboard_LBL_rank"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/workout_text_size"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/leaderboard_LBL_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/david"
            android:textColor="@android:color/black"
            android:textSize="@dimen/workout_text_size"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/leaderboard_LBL_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_750_kcal"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/workout_text_size"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
