<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/workout_IMG"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_workout_place"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/workout_LBL_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="120dp"
            android:layout_alignParentTop="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/workout_LBL_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_description"
            android:textSize="14sp"
            android:layout_marginStart="120dp"
            android:layout_below="@id/workout_LBL_name"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/workoutLBLCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_burned"
            android:textSize="14sp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_below="@id/workout_LBL_description"
            android:layout_marginStart="120dp"
            android:layout_marginTop="4dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/workout_IMG_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/empty_heart"/>

        
    </RelativeLayout>
</androidx.cardview.widget.CardView>
